--- a/src/App.css
+++ b/src/App.css
@@ -43,11 +43,17 @@ h3 {
 .faq-bg {
   background: url(./Assets/Images/faq_bg.png) no-repeat;
   background-size: cover;
-  background-position: center -5px;
-  height: 600px;
+  background-position: left -55px;
+  padding: 10% 0;
 }
-
-
+.faq-content-accordion {
+  margin-bottom: 10px;
+  border-radius: 6px;
+  border: 2px solid rgba(0, 0, 0, 0.3)!important;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.faq-content .faq-content-accordion:not(:last-child) { border-bottom: 1!important;}
+.faq-content { padding: 5% 20%;}
 
   /* Media Queries */
   @media screen and (max-width: 995px) {
@@ -62,5 +68,8 @@ h3 {
   @media screen and (max-width: 800px) {
     .header-bg {
       height: 400px;
+    }
+    .faq-content {
+      padding: 5% 10%;
     }
   }
