--- a/src/App.css
+++ b/src/App.css
@@ -124,6 +124,33 @@ text-align: left;
 .faq-content .faq-content-accordion:not(:last-child) { border-bottom: 1!important;}
 .faq-content { padding: 5% 25%;}
 
+/* Latest shows */
+.latest-show-content {
+  width: 400px!important;
+  height: 400px!important;
+}
+
+.about-content {
+  background-image: url(./Assets/Images/bgs/yellow-bg.png);
+  background-repeat: no-repeat;
+  /* background-position : calc(-100% - 400px) 40%; */
+  background-position: right 100%;
+  background-size: 80% 80%;
+}
+.live-streaming-content {
+  background: url(./Assets/Images/bgs/streaming-bg.png) repeat;
+  background-position-x: center;
+  background-position-y: 50%;
+  background-size: cover;
+  top: -250px;
+  min-height: 700px;
+  position: relative;
+}
+.live-streaming-left {
+  position: relative;
+  top: 250px;
+}
+
   /* Media Queries */
   @media screen and (max-width: 995px) {
     .header-bg {    
