--- a/src/App.css
+++ b/src/App.css
@@ -11,62 +11,74 @@
   font-family: NotoSans;
   src: url(./Assets/Fonts/NotoSans-Medium.ttf);
 }
+
 .font-gloucester {
-  font-family: gloucester!important;
+  font-family: gloucester !important;
 }
+
 .font-notoSans {
   font-family: NotoSans;
 }
-  .color-gray {
-  color:gray
+
+.color-gray {
+  color: gray
 }
 
 /* Login */
 .login-card {
   padding: 10%;
-  border-radius: 12px!important;
+  border-radius: 12px !important;
 }
+
 .title-style01 {
-    justify-content: center;
-    text-align: center;
-    font-weight: 400;
-    color: #464A53;
-    padding: 0px 0 10px 0!important;
-    margin: 0px 0 0px 0!important;
+  justify-content: center;
+  text-align: center;
+  font-weight: 400;
+  color: #464A53;
+  padding: 0px 0 10px 0 !important;
+  margin: 0px 0 0px 0 !important;
 }
+
 .label-style01 {
   width: 60%;
   height: auto;
   color: #464A53;
-  font-size: 11px;;
+  font-size: 11px;
+  ;
 }
 
 ::placeholder {
   color: #adb2bd;
-  opacity: 1; /* Firefox */
+  opacity: 1;
+  /* Firefox */
 }
 
-::-ms-input-placeholder { /* Edge 12-18 */
+::-ms-input-placeholder {
+  /* Edge 12-18 */
   color: #adb2bd;
 }
+
 .login-content-style01 span {
-  font-size: 12px!important;
+  font-size: 12px !important;
   color: #adb2bd;
 }
+
 .login-forgot-pass {
-  font-size: 13px!important;
+  font-size: 13px !important;
   color: #1A315C;
   padding-top: 5px;
-  font-weight: 500!important;
+  font-weight: 500 !important;
 }
+
 .login-content-style01 svg {
   position: relative;
   right: -6px;
   top: -1px;
 }
+
 .login-btn-submit {
   margin-top: 24px;
-  background: #1A315C  0% 0% no-repeat padding-box;
+  background: #1A315C 0% 0% no-repeat padding-box;
   color: #eae3e3;
   text-align: center;
   width: 100%;
@@ -75,8 +87,9 @@
   border-radius: 6px;
   font-family: NotoSans;
   font-weight: normal;
-  font-size: 18px; 
+  font-size: 18px;
 }
+
 .login-btn-create-ac {
   background: #fff 0% 0% no-repeat padding-box;
   color: #1A315C;
@@ -85,49 +98,64 @@
 
 
 .header-content {
-  background-color: #fff!important;
-  color: #333!important;
+  background-color: #fff !important;
+  color: #333 !important;
 }
-li.header-left-menu, .MuiButtonBase-root {
-  color: #333!important;
+
+li.header-left-menu,
+.MuiButtonBase-root {
+  color: #333 !important;
 }
-li.header-left-menu, .MuiButtonBase-root:hover {
-  color: #FFA903!important;
+
+li.header-left-menu,
+.MuiButtonBase-root:hover {
+  color: #FFA903 !important;
 }
-h3 { 
+
+h3 {
   font-family: gloucester;
   text-align: center;
 }
+
 .header-bg {
   background: url(./Assets/Images/home_bg.png) no-repeat;
   background-size: cover;
   background-position: center top;
   height: 600px;
 }
+
 .faq-bg {
   background: url(./Assets/Images/faq_bg.png) no-repeat;
   background-size: cover;
   background-position: left -55px;
   padding: 10% 0;
 }
+
 .faq-content-accordion {
   margin-bottom: 10px;
   border-radius: 6px;
-  border: 2px solid rgba(0, 0, 0, 0.3)!important;
+  border: 2px solid rgba(0, 0, 0, 0.3) !important;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  font-family: NotoSans!important;
+  font-family: NotoSans !important;
 }
+
 .faq-content-accordion p {
-font-family: NotoSans!important;
-text-align: left;
+  font-family: NotoSans !important;
+  text-align: left;
 }
-.faq-content .faq-content-accordion:not(:last-child) { border-bottom: 1!important;}
-.faq-content { padding: 5% 25%;}
+
+.faq-content .faq-content-accordion:not(:last-child) {
+  border-bottom: 1 !important;
+}
+
+.faq-content {
+  padding: 5% 25%;
+}
 
 /* Latest shows */
 .latest-show-content {
-  width: 400px!important;
-  height: 400px!important;
+  width: 400px !important;
+  height: 400px !important;
 }
 
 .about-content {
@@ -137,6 +165,7 @@ text-align: left;
   background-position: right 100%;
   background-size: 80% 80%;
 }
+
 .live-streaming-content {
   background: url(./Assets/Images/bgs/streaming-bg.png) repeat;
   background-position-x: center;
@@ -146,33 +175,48 @@ text-align: left;
   min-height: 700px;
   position: relative;
 }
+
 .live-streaming-left {
   position: relative;
   top: 250px;
 }
 
-  /* Media Queries */
-  @media screen and (max-width: 995px) {
-    .header-bg {    
-      height: 400px;
-    }
-    .faq-content {
-      padding: 5% 10%;
-    }
-    
+/* Media Queries */
+@media screen and (max-width: 995px) {
+  .header-bg {
+    height: 400px;
   }
 
-  @media screen and (max-width: 1170px) {
-   
+  .faq-content {
+    padding: 5% 10%;
   }
-  @media screen and (max-width: 800px) {
-    .header-bg {
-      height: 400px;
-    }
-    .faq-content {
-      padding: 5% 10%;
-    }
-    .login-card {
-      padding: 5%;
-    }
+
+}
+
+@media screen and (max-width: 1170px) {}
+
+@media screen and (max-width: 800px) {
+  .header-bg {
+    height: 400px;
   }
+
+  .faq-content {
+    padding: 5% 10%;
+  }
+
+  .login-card {
+    padding: 5%;
+  }
+}
+
+.side-social-link-container {
+  position: fixed;
+  top: 20%;
+  right: 0;
+  background-color: #C7C7C7;
+  padding: 8px 4px 0px 12px;
+  display: flex;
+  flex-direction: column;
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+}
