--- a/src/App.css
+++ b/src/App.css
@@ -124,6 +124,32 @@ h3 {
   height: 600px;
 }
 
+
+/* Discover a World of Content */
+.discover-world-main {
+  margin-top: 10%;
+  padding-top: 50px;
+  background-position: center bottom;
+  background-size: contain;
+  background: linear-gradient(180deg, rgba(242,244,214,0.02853641456582634) 0%, rgba(238,238,137,0.5663515406162465) 24%, rgba(255,255,255,1) 69%);
+}
+.discover-world {
+  padding-bottom: 10%;
+  padding-left: 10%;
+  background-image: url(./Assets/Images/bgs/discover-bg.png);
+  background-repeat: no-repeat;
+  background-position: center bottom;
+  background-size: 100% 50%;
+  justify-content: center;
+}
+.discover-world-left {
+  min-height: 300px;
+}
+.discover-img01 {position: relative; bottom: 10px; width: 90%!important;}
+.discover-img02 {position: relative; height: 120%!important; width: 100%!important;}
+.discover-img03 { position: relative; top:30px;}
+.discover-img04 {}
+
 .faq-bg {
   background: url(./Assets/Images/faq_bg.png) no-repeat;
   background-size: cover;
