Watch more button hover property changes done

--- a/src/App.css
+++ b/src/App.css
@@ -269,3 +269,33 @@ h3 {
   border-top-left-radius: 8px;
   border-bottom-left-radius: 8px;
 }
+
+.watchmore-btn-outer-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+
+.watchmore-btn-inner-container {
+  border-radius: 4px;
+  color: #fff;
+  font-size: 14px;
+  background-color: #1A315C;
+  width: 130px;
+  min-height: 40px;
+  border: none;
+}
+
+.watchmore-btn-inner-container::after {
+  content: "WATCH MORE";
+}
+
+.watchmore-btn-inner-container:hover::after {
+  content: "IWC LOGIN";
+}
+
+.watchmore-btn-inner-container:hover {
+  background: #FFA903;
+}
