--- a/src/App.css
+++ b/src/App.css
@@ -187,8 +187,6 @@ h3 {
 
 /* Discover a World of Content */
 .discover-world-main {
-  margin-top: 10%;
-  padding-top: 50px;
   background-position: center bottom;
   background-size: contain;
   background: linear-gradient(180deg, rgba(242,244,214,0.02853641456582634) 0%, rgba(238,238,137,0.5663515406162465) 24%, rgba(255,255,255,1) 69%);
@@ -316,14 +314,16 @@ h3 {
     padding: 5%;
   }
   .about-content-top {
-    margin-top: -250px;
+    margin-top: -300px!important;
     bottom: -200px;
   }
   .swiper-01 .swiper-slide-active,.swiper-02 .swiper-slide-active { width: 500px!important;}
 }
-
-
-
+@media screen and (min-width: 800px) and (max-width: 900px) {
+  .about-content-top {
+    margin-top: -230px!important;
+  }
+}
 
 .side-social-link-container {
   position: fixed;
